@@ -1,3 +1,8 @@
+2015-02-09  Mark Wielaard  <mjw@redhat.com>
+
+	* gdb-index.cc (Gdb_index_info_reader::visit_top_die): Recognize
+	DW_LANG_Fortran03 and DW_LANG_Fortran08.
+
 2015-02-16  Cary Coutant  <ccoutant@google.com>
 
 	PR gold/13577
